codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_menu.snap
---
source: tui/src/app/daemon_menu_tests.rs
assertion_line: 104
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Daemon
  Running daemon: v0.153.0


› 1. Install latest custom release
  2. Use this CLI build

  enter select · esc back
