codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_remote_guidance.snap
---
source: tui/src/app/daemon_menu_tests.rs
assertion_line: 220
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Daemon
  Not connected to the local background server.
  Manage this server on its host. Local daemon updates are unavailable for
  remote connections.


›    Install latest custom release
     Use this CLI build

  enter select · esc back
