codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_stable_confirmation.snap
---
source: tui/src/app/daemon_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\nwidth).replace(r\"C:\\cli-build\\bin\\codex\", \"/x/cli-build/bin/codex\")"
---
  Update daemon and exit Codex?
  Install the latest GitHub custom release; keep your automatic-update
  setting.
  This may restart the daemon and interrupt active or queued work.
  Codex exits to update in this terminal. Relaunch it afterward.


› 1. Cancel
  2. Update and exit

  enter select · esc back
